Fixed alignment in CSS

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -63,8 +63,15 @@
 }
 
 .container {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    width: 100%;
+}
+
+#form {
+    width: 600px;
+    margin: 0 auto;
+    text-align: left;
 }
 
 input[type=text], select, textarea {
